src/deploy/kubernetes/example/multitenancy/tenant-0/callee-service/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${_Values_app_name}-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    #rewrites URI from /* to /callee/*
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
    #rewrite URI from /callee to /callee/ to add missing trailing slash
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/${_Values_ingress_name})$ \$1/ redirect;

    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret

    #mod security logging
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
#    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /${_Values_ingress_name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${_Values_app_name}
                port:
                  name: transport
